# AudioUtils

./: .gitignore  README.md  cross_build.sh  package.sh  release.sh  run_android.sh
android/: local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_effect.xml  activity_main.xml  activity_mix.xml
android/app/src/main/res/values/: strings.xml
android/audio_utils-arm64/: build.gradle
android/audio_utils-arm64/src/main/: AndroidManifest.xml
android/audio_utils-arm64/src/main/jni/: Android.mk  Application.mk
android/audio_utils-armv5/: .gitignore
android/audio_utils-armv5/src/main/: AndroidManifest.xml
android/audio_utils-armv5/src/main/jni/: Application.mk  lib-audio-utils
android/audio_utils-armv7a/src/main/: AndroidManifest.xml
android/audio_utils-armv7a/src/main/jni/: Application.mk
android/audio_utils-java/: build.gradle
android/audio_utils-java/src/main/: AndroidManifest.xml
android/audio_utils-x86/: proguard-rules.pro
android/audio_utils-x86/src/main/: AndroidManifest.xml
android/audio_utils-x86/src/main/jni/: Application.mk
android/audio_utils-x86_64/src/main/: AndroidManifest.xml
android/audio_utils-x86_64/src/main/jni/: Application.mk
android/lib-audio-utils/: Android.mk  build.gradle  utils.h  xm_audio_generator_jni.c  xm_audio_generator_jni.h  xm_audio_utils_jni.c
lib-audio-utils/: CMakeLists.txt  run_test.sh  run_valgrind_test.sh
lib-audio-utils/data/: Sweep_-15dBFS_LR_Phase90_44k_16bit_1ch.pcm  Sweep_-15dBFS_LR_Phase90_44k_16bit_2ch.pcm  effect_config.txt  morph_input.pcm  ns_input.pcm  pcm_mono_44kHz_0035.pcm  web_effect_config.txt
lib-audio-utils/include/: error_def.h  log.h  xm_android_jni.h  xm_audio_generator.h  xm_audio_utils.h  xm_duration_parser.h  xm_wav_utils.h
lib-audio-utils/src/: xm_audio_generator.c  xm_audio_utils.c  xm_duration_parser.c  xm_wav_utils.c
lib-audio-utils/src/codec/: audio_decoder_factory.c  audio_decoder_factory.h  audio_encoder.c  audio_encoder.h  audio_muxer.c  audio_muxer.h  duration_parser.c  duration_parser.h  ffmpeg_decoder.c  ffmpeg_decoder.h  ffmpeg_utils.c  ffmpeg_utils.h  idecoder.c  idecoder.h  muxer_config.h  pcm_decoder.c  pcm_decoder.h
lib-audio-utils/src/codec/mediacodec/: audio_encoder_mediacodec.c  audio_encoder_mediacodec.h  xm_android_jni.c
lib-audio-utils/src/codec/mediacodec/ijkj4a/: MediaCodec.c  MediaCodec.h  MediaFormat.c  MediaFormat.h  j4a_allclasses.include.h  j4a_allclasses.loader.h
lib-audio-utils/src/codec/mediacodec/ijksdl/: android_nativewindow.h  ijksdl_codec_android_mediacodec.c  ijksdl_codec_android_mediacodec.h  ijksdl_codec_android_mediacodec_internal.c  ijksdl_codec_android_mediacodec_java.c  ijksdl_codec_android_mediacodec_java.h  ijksdl_codec_android_mediadef.h  ijksdl_codec_android_mediaformat.c  ijksdl_codec_android_mediaformat.h  ijksdl_codec_android_mediaformat_java.c  ijksdl_codec_android_mediaformat_java.h  ijksdl_inc_internal.h  ijksdl_misc.h  ijksdl_mutex.c  ijksdl_stdinc.h  ijksdl_thread.c  ijksdl_timer.c
lib-audio-utils/src/codec/sw/: audio_encoder_sw.c  audio_encoder_sw.h
lib-audio-utils/src/effects/: beautify.c  echo.c  echos.c  effect_struct.h  effects.h  minions.c  morph_filter.c  noise_suppression.c  reverb.c  voice_effect.c  voice_effect.h  volume_limiter.c  xm_audio_effects.c  xm_audio_effects.h
lib-audio-utils/src/effects/beautify/: compressor.c  compressor.h  equalizer.c  equalizer.h  flanger.c  flanger.h  limiter.c  limiter.h  multiband_compressor.c  multiband_compressor.h
lib-audio-utils/src/effects/dsp_tools/fft/: fft8g.c  fft8g.h
lib-audio-utils/src/effects/dsp_tools/iir_design/: iir_design.c  iir_design.h
lib-audio-utils/src/effects/math/: fast_math_ops.h  junior_func.c  junior_func.h  spl_math.h
lib-audio-utils/src/effects/morph_filter/pitch_tracker/server/: pitch_cand_loader.c  pitch_cand_loader.h  pitch_cand_server.c  pitch_find_path.c  pitch_find_path.h  pitch_type.h
lib-audio-utils/src/effects/morph_filter/pitch_tracker/src/: blackman.h  frequency_limiter.h  low_pass.c  low_pass.h  pitch_core.c  pitch_core.h  pitch_macro.h  pitch_tracker.c  pitch_tracker.h
lib-audio-utils/src/effects/morph_filter/voice_morph/morph/: morph_core.c  morph_core.h  voice_morph.c  voice_morph.h
lib-audio-utils/src/effects/morph_filter/voice_morph/resample/: resample.c  resample.h
lib-audio-utils/src/effects/noise_suppression/: noise_suppression.c  noise_suppression.h
lib-audio-utils/src/effects/noise_suppression/ns/: fft4g.c  fft4g.h  ns_core.c  ns_core.h  signal_processing_library.h  splitting_filter.c  typedefs.h
lib-audio-utils/src/effects/resample/: resample.c  resample.h
lib-audio-utils/src/effects/tables/: recip_table.h
lib-audio-utils/src/json/: json_parse.c  json_parse.h
lib-audio-utils/src/mixer/: fade_in_out.c  fade_in_out.h  mixer_effects.h  side_chain_compress.c  side_chain_compress.h  xm_audio_mixer.c  xm_audio_mixer.h
lib-audio-utils/src/source/: audio_source.c  audio_source.h  audio_source_queue.c  audio_source_queue.h  source_queue.h
lib-audio-utils/src/tools/: avstring.c  avstring.h  conversion.c  conversion.h  dict.c  dict.h  fifo.c  fifo.h  log.c  mem.c  mem.h  sdl_mutex.c  sdl_mutex.h  util.c  util.h
lib-audio-utils/src/wave/: wav_dec.c  wav_dec.h
lib-audio-utils/tests/: CMakeLists.txt  file_helper.h  test_audio_decoder.c  test_audio_encoder.c  test_beautify.c  test_effects.c  test_fifo.c  test_logger.c  test_noise_suppression.c  test_reverb.c  test_volume_limiter.c  test_wav_concat.c  test_wav_crop.c  test_wav_dec.c  test_xm_audio_generator.c  test_xm_audio_utils_decode.c  test_xm_audio_utils_mix.c  test_xm_audio_utils_resampler.c
prebuilt/android/ffmpeg-arm64/include/libffmpeg/: config.h
prebuilt/android/ffmpeg-armv5/include/libavformat/: url.h
prebuilt/android/ffmpeg-armv5/include/libffmpeg/: config.h
prebuilt/android/ffmpeg-armv7a/include/libffmpeg/: config.h
prebuilt/android/ffmpeg-x86/include/libffmpeg/: config.h
prebuilt/android/ffmpeg-x86_64/include/libffmpeg/: config.h
(+32 files in other folders)
